--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,41 @@
 @import "tailwindcss";
+@theme {
+  --animate-loading: loading 500ms infinite;
+  @keyframes loading {
+    0% {
+      transform: rotate(0deg);
+    }
+    16% {
+      transform: rotate(30deg);
+    }
+    33% {
+      transform: rotate(60deg);
+    }
+    50% {
+      transform: rotate(90deg);
+    }
+    66% {
+      transform: rotate(120deg);
+    }
+    83% {
+      transform: rotate(150deg);
+    }
+    100% {
+      transform: rotate(180deg);
+    }
+  }
+}
+
+:root {
+  --color-primary: red;
+}
+
+html {
+  color-scheme: dark;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-primary: white;
+  }
+}
